# ChangeLog for games-fps/quake3-data
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/games-fps/cvs-repo/gentoo-x86/games-fps/quake3-data/ChangeLog,v 1.9 2007/03/12 14:57:51 genone Exp $

  12 Mar 2007; Marius Mauch <genone@gentoo.org> quake3-data-1.32b.ebuild:
  Replacing einfo with elog

  24 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  quake3-data-1.32b.ebuild:
  Moved cdrom_get_cds to src_unpack since binary packages don't require the
  original media to install.

  24 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  quake3-data-1.32b.ebuild:
  Add ~x86-fbsd keyword.

  20 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  quake3-data-1.32b.ebuild:
  Made sure dir was defined and closing bug #130620.

  17 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  quake3-data-1.32b.ebuild:
  Fixed up file collisions and closing bug #130263.

  15 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  quake3-data-1.32b.ebuild:
  Changed to use idsoftware thirdpartymirror.

  21 Jan 2006; Lars Weiler <pylon@gentoo.org> quake3-data-1.32b.ebuild:
  Stable on ppc.

  05 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  quake3-data-1.32b.ebuild:
  Removing quake3/quake3-bin from RDEPEND since one could possibly use the
  data without either.

*quake3-data-1.32b (24 Oct 2005)

  24 Oct 2005; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by me.