@@ -1,4 +1,4 @@
 DIST linuxq3apoint-1.32b-3.x86.run 30923961 RMD160 eb63177fc0a30cda4976d8b68e065efb6dc41e50 SHA1 802d84af0d515db50a496c4c55d1f1c4f40a9239 SHA256 c36132c5556b35e01950f1e9c646235033a5130f87ad776ba2bc7becf4f4f186
-EBUILD quake3-data-1.32b.ebuild 1302 RMD160 6f936d079d0e9464f3f236262e603b86c2e79044 SHA1 a82253b2d1b1bf7dad4d3ea8ca541a247a8a48e7 SHA256 11e837779028c08cf93b945705b2d4b96245a669adb7a2c430f6e0778d9c332d
-MISC ChangeLog 1413 RMD160 4ca0c6768c03d3d220f8c3a2410a0dec9fc2344a SHA1 3aaabbb0a349abd4918de8f8726139b6ad66618e SHA256 a1f657c5963bc573b9cbb0995bea735d7883bde9315a0beaded018754536293a
+EBUILD quake3-data-1.32b.ebuild 1311 RMD160 bb39591be056b818016c25fece92187a7f341af7 SHA1 a04a8f617ca76d6d007425efc9db7dfad00e94be SHA256 55fe871f318d0d3913915e1cadc5802d7cf133a4bc227ac6e0938a09d760f634
+MISC ChangeLog 1533 RMD160 a6a204c6e9660c72a24af567bd3635b473d79984 SHA1 51a73214123722822bc5a9a5bdb053c489aafb28 SHA256 28bc8845d6e9da86e1c0f07e56e6c4c81870b3b4a32c9a1145a05602f1a9b99b
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
